Project

General

Profile

Actions

Bug #18992

closed

rgw_file: "exact match" invalid for directories, in RGWLibFS::stat_leaf()

Added by Matt Benjamin about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

rgw_file: invalid use of RGWFileHandle::FLAG_EXACT_MATCH

The change which introduced this flag also caused it to be
given as the flags argument to RGWLibFS::stat_leaf() when called
from rgw_lookup().

This was incorrect: in particular, when a directory is known only
as a common prefix of other objects, the AWS namespace mapping
convention requires lookup("foo") to match a non-materialized
instance of "foo/" (case 2 in RGWLibFS::stat_leaf's stat loop).


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19165: jewel: rgw_file: "exact match" invalid for directories, in RGWLibFS::stat_leaf()ResolvedNathan CutlerActions
Copied to rgw - Backport #19166: kraken: rgw_file: "exact match" invalid for directories, in RGWLibFS::stat_leaf()ResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin about 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #2

Updated by Matt Benjamin about 7 years ago

  • Backport changed from jewel to jewel kraken
Actions #3

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19165: jewel: rgw_file: "exact match" invalid for directories, in RGWLibFS::stat_leaf() added
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19166: kraken: rgw_file: "exact match" invalid for directories, in RGWLibFS::stat_leaf() added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF